welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var T = new Array[Int](500)
	for (i <- T)
		{T(i)=0}}